--- a/style.css
+++ b/style.css
@@ -29,19 +29,9 @@ body {
     align-items: center;
     justify-content: space-evenly;
     flex-direction: row;
-    padding: 3rem 2rem 3rem 2rem;
-    width: 100%;
-    height: 60rem;
+    padding: 6rem 2rem 6rem 2rem;
     gap: 4rem;
 }
-
-/* .mansoor {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    height: 50%;
-} */
 
 .sign-up {
     display: flex;
@@ -108,7 +98,7 @@ body {
     font-weight: 400;
     background-color: var(--background-inside-input);
     width: 34rem;
-    height: 3rem;
+    /* height: 3rem; */
     padding: 1rem 1.5rem 1rem 1.5rem;
     border-radius: 0.5rem;
     color: var(--text-color-primary);
@@ -183,33 +173,27 @@ body {
     }
 
     .container {
-        height: auto;
-        padding: 2rem 0 0 0;
-    }
-
-    .inputs-part {
-        padding: 2rem;
+        padding: 32px 16px 32px 16px;
     }
 
     .e1 {
-        width: 23rem;
-        height: 3rem;
+        width: 300px;
     }
 
     .button {
-        width: 23rem;
-        height: 3rem;
+        width: 300px;
     }
 
     .term-of-service {
         text-align: center;
         flex-wrap: wrap;
         display: flex;
+        width: 18rem;
         line-height: 1.5rem;
     }
 
     .title {
-        font-size: 1.8rem;
+        font-size: 28px;
     }
 }
 
