--- a/style.css
+++ b/style.css
@@ -168,9 +168,9 @@ body {
 /* responsive part  */
 
 @media screen and (max-width:768px) {
-    .sign-up-image img {
+    /* .sign-up-image img {
         display: none;
-    }
+    } */
 
     .container {
         padding: 32px 16px 32px 16px;
