--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     align-items: center;
     justify-content: space-evenly;
     flex-direction: row;
-    padding: 6rem 2rem 6rem 2rem;
+    /* padding: 6rem 2rem 6rem 2rem; */
     gap: 4rem;
 }
 
@@ -177,11 +177,17 @@ body {
     }
 
     .e1 {
-        width: 300px;
+        width: 366px;
+    }
+
+    .inputs-part {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .button {
-        width: 300px;
+        width: 366px;
     }
 
     .term-of-service {
