--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     align-items: center;
     justify-content: space-evenly;
     flex-direction: row;
-    /* padding: 6rem 2rem 6rem 2rem; */
+    padding: 6rem 2rem 6rem 2rem;
     gap: 4rem;
 }
 
@@ -177,7 +177,7 @@ body {
     }
 
     .e1 {
-        width: 366px;
+        width: 150px;
     }
 
     .inputs-part {
@@ -187,7 +187,7 @@ body {
     }
 
     .button {
-        width: 366px;
+        width: 150px;
     }
 
     .term-of-service {
