--- a/style.css
+++ b/style.css
@@ -172,12 +172,12 @@ body {
         display: none;
     }
 
-    .container {
+    /* .container {
         padding: 32px 16px 32px 16px;
-    }
+    } */
 
     .e1 {
-        width: 150px;
+        width: 300px;
     }
 
     .inputs-part {
@@ -187,7 +187,7 @@ body {
     }
 
     .button {
-        width: 150px;
+        width: 300px;
     }
 
     .term-of-service {
