--- a/style.css
+++ b/style.css
@@ -172,9 +172,9 @@ body {
         display: none;
     }
 
-    /* .container {
+    .container {
         padding: 32px 16px 32px 16px;
-    } */
+    }
 
     .e1 {
         width: 300px;
