--- a/style.css
+++ b/style.css
@@ -172,8 +172,13 @@ body {
         display: none;
     }
 
-    .container {
+    /* .container {
         padding: 32px 16px 32px 16px;
+    } */
+    .sign-up {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .e1 {
