--- a/style.css
+++ b/style.css
@@ -172,9 +172,12 @@ body {
         display: none;
     }
 
-    /* .container {
-        padding: 32px 16px 32px 16px;
-    } */
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .sign-up {
         display: flex;
         justify-content: center;
