--- a/style.css
+++ b/style.css
@@ -176,12 +176,14 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100%;
     }
 
     .sign-up {
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100%;
     }
 
     .e1 {
