--- a/style.css
+++ b/style.css
@@ -177,13 +177,7 @@ body {
         justify-content: center;
         align-items: center;
         width: 100%;
-    }
-
-    .sign-up {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
+        gap: 0;
     }
 
     .e1 {
