--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body {
         justify-content: center;
         align-items: center;
         width: 100%;
-        padding: 3rem 0;
+        padding: 48px 32px 48px 32px;
         gap: 0;
     }
 
@@ -198,7 +198,7 @@ body {
         text-align: center;
         flex-wrap: wrap;
         display: flex;
-        width: 19rem;
+        width: 17rem;
         line-height: 21.82px;
     }
 
