--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body {
         justify-content: center;
         align-items: center;
         width: 100%;
-        padding: 48px 32px 48px 32px;
+        padding: 70px 32px;
         gap: 0;
     }
 
