--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ body {
     font-weight: 400;
     background-color: var(--background-inside-input);
     width: 34rem;
-    /* height: 3rem; */
     padding: 1rem 1.5rem 1rem 1.5rem;
     border-radius: 0.5rem;
     color: var(--text-color-primary);
@@ -181,7 +180,7 @@ body {
     }
 
     .e1 {
-        width: 330px;
+        width: 20.625rem;
     }
 
     .inputs-part {
@@ -191,7 +190,7 @@ body {
     }
 
     .button {
-        width: 330px;
+        width: 20.625rem;
     }
 
     .term-of-service {
@@ -199,32 +198,66 @@ body {
         flex-wrap: wrap;
         display: flex;
         width: 17rem;
-        line-height: 23px;
+        line-height: 1.364rem;
     }
 
     .title {
-        font-size: 36px;
+        font-size: 2.188rem;
     }
 }
 
 
 @media screen and (min-width:768px) and (max-width:1023px) {
+
+    .sign-up-image img {
+        width: 28rem;
+        height: 32rem;
+    }
+
+    .container {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        height: 44rem;
+        padding: 3rem 2rem;
+        gap: 4rem;
+    }
+
     .e1 {
-        width: 23rem;
-        height: 3rem;
+        width: 20.625rem;
+    }
+
+    .inputs-part {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .button {
-        width: 23rem;
-        height: 3rem;
+        width: 20.625rem;
     }
 
     .term-of-service {
         text-align: center;
-        line-height: 1.5rem;
+        flex-wrap: wrap;
+        display: flex;
+        line-height: 1.364rem;
     }
 
     .title {
-        font-size: 1.8rem;
+        font-size: 1.875rem;
+    }
+}
+
+@media screen and (min-width:1023px) {
+    .container {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        height: 44rem;
+        padding: 3rem 2rem;
+        gap: 4rem;
     }
 }
