--- a/style.css
+++ b/style.css
@@ -77,8 +77,7 @@ body {
 }
 
 .login a:hover {
-    text-decoration: underline;
-    color: var(--link-color);
+    border-bottom: 2px solid var(--link-color);
 }
 
 .inputs-part {
@@ -117,6 +116,11 @@ body {
     cursor: pointer;
     width: 1rem;
     height: 1rem;
+}
+
+.eye-hide-icon:hover {
+    filter: invert(100%);
+
 }
 
 .password-and-icon {
@@ -174,8 +178,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100%;
-        height: 44rem;
+        padding: 3rem 2rem;
         gap: 0;
     }
 
@@ -218,10 +221,7 @@ body {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        width: 100%;
-        height: 44rem;
-        padding: 3rem 2rem;
-        gap: 4rem;
+        padding: 4rem 2rem;
     }
 
     .e1 {
@@ -255,9 +255,7 @@ body {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        width: 100%;
-        height: 44rem;
-        padding: 3rem 2rem;
+        padding: 0rem 2rem;
         gap: 4rem;
     }
 }
