--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
     text-decoration: none;
     outline: none;
-    font-family: sans-serif;
     object-fit: cover;
+    font-family: "Nunito";
 }
 
 :root {
@@ -18,6 +18,10 @@
     --link-color: #006EDB;
     --normal-eye-bacground-color: #959595;
     --hover-eye-bacground-color: #F9F9F9;
+    --erorr: #F54C40;
+    --input-text-hover: #FFFFFF;
+    --background-input-hover: #2F2F2F;
+    --font-family-inputs: "Nunito";
 }
 
 body {
@@ -55,13 +59,14 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .login {
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
+    height: 1.5rem;
 }
 
 .login p {
@@ -85,8 +90,11 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 1rem;
+}
 
+.password-and-icon {
+    position: relative;
+    margin-bottom: 20px;
 }
 
 .e1 {
@@ -96,36 +104,79 @@ body {
     font-weight: 400;
     background-color: var(--background-inside-input);
     width: 34rem;
-    padding: 1rem 1.5rem 1rem 1.5rem;
+    padding: 1rem 1.5rem;
     border-radius: 0.5rem;
     color: var(--text-color-primary);
+    position: relative;
+    transition: background-color 250ms ease-in-out;
+
 }
 
-::placeholder {
+:is(.e1:hover) {
+    background-color: var(--background-input-hover);
+}
+
+.password-label {
+    position: absolute;
     color: var(--text-color-input-label);
     font-size: 1rem;
     font-weight: 400;
+    top: 50%;
+    left: 1.5rem;
+    pointer-events: none;
+    transform: translateY(-50%);
+    transition: color, top, font-size, 250ms ease-in-out;
 }
+
+:is(.e1:focus + #password-label-confirmation) {
+    color: var(--erorr);
+}
+
+.password-and-icon input:is(:hover, :focus)+label {
+    color: #F9F9F9;
+}
+
+.password-and-icon input:is(:focus, :not([value=""]))+label {
+    top: 0.75rem;
+    font-size: 0.75rem;
+}
+
 
 .eye-hide-icon {
     filter: invert(59%);
     position: absolute;
     right: 1rem;
-    top: 1rem;
+    top: 1.2rem;
     object-fit: cover;
     cursor: pointer;
     width: 1rem;
     height: 1rem;
 }
 
-.eye-hide-icon:hover {
+:is(.eye-hide-icon:hover) {
     filter: invert(100%);
 
+}
+
+.error-message {
+    display: flex;
+    justify-content: start;
+    width: 100%;
+    color: red;
+    position: relative;
+    bottom: 0.7rem;
+    font-weight: 700;
+    font-size: 0.8rem;
+}
+
+#password-confirmation {
+    border: 2px solid red;
 }
 
 .password-and-icon {
     position: relative;
 }
+
 
 .button {
     background-color: var(--normal-button-bacground-color);
@@ -152,6 +203,7 @@ body {
     gap: 0.5rem;
     font-size: 1rem;
     font-weight: 600;
+    padding: 1rem 0;
 }
 
 .term-of-service .Privacy-blue {
@@ -178,7 +230,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 5rem 2rem;
+        padding: 2.3rem 2rem;
         gap: 0;
     }
 
@@ -207,6 +259,11 @@ body {
     .title {
         font-size: 2.188rem;
     }
+
+    .error-message {
+        bottom: 1rem;
+    }
+
 }
 
 
@@ -221,7 +278,7 @@ body {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        padding: 4rem 2rem;
+        padding: 2.3rem 2rem;
     }
 
     .e1 {
@@ -232,6 +289,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
+
     }
 
     .button {
@@ -248,6 +306,11 @@ body {
     .title {
         font-size: 1.875rem;
     }
+
+    .error-message {
+        bottom: 1rem;
+    }
+
 }
 
 @media screen and (min-width:1023px) {
@@ -258,4 +321,9 @@ body {
         padding: 0rem 2rem;
         gap: 4rem;
     }
+
+    .error-message {
+        bottom: 1rem;
+    }
+
 }
