--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@
 
 body {
     background-color: var(--background-primary);
+    width: 100%;
+    height: 100dvb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -34,6 +39,7 @@ body {
     justify-content: space-evenly;
     flex-direction: row;
     gap: 4rem;
+    width: 100%;
 }
 
 .sign-up {
@@ -51,7 +57,10 @@ body {
 .title {
     color: var(--text-color-primary);
     font-size: 2.25rem;
+    font-family: "Roboto", var(--font-family-inputs);
     font-weight: 900;
+    font-style: normal;
+
 }
 
 .header {
@@ -108,7 +117,7 @@ body {
     border-radius: 0.5rem;
     color: var(--text-color-primary);
     position: relative;
-    transition: background-color 250ms ease-in-out;
+    transition: background-color 300ms ease-in-out;
 
 }
 
@@ -125,7 +134,7 @@ body {
     left: 1.5rem;
     pointer-events: none;
     transform: translateY(-50%);
-    transition: color, top, font-size, 250ms ease-in-out;
+    transition: color, top, font-size, 300ms ease-in-out;
 }
 
 :is(.e1:focus + #password-label-confirmation) {
@@ -155,22 +164,22 @@ body {
 
 :is(.eye-hide-icon:hover) {
     filter: invert(100%);
-
+    transition: 300ms;
 }
 
 .error-message {
     display: flex;
     justify-content: start;
     width: 100%;
-    color: red;
+    color: var(--erorr);
     position: relative;
     bottom: 0.7rem;
     font-weight: 700;
     font-size: 0.8rem;
 }
 
-#password-confirmation {
-    border: 2px solid red;
+#input3 {
+    border: 2px solid var(--erorr);
 }
 
 .password-and-icon {
@@ -193,6 +202,7 @@ body {
 
 .button:hover {
     background-color: var(--hover-button-bacground-color);
+    transition: 300ms;
 }
 
 
@@ -216,6 +226,10 @@ body {
     width: 38rem;
     height: 43.75rem;
     padding: 1.5rem;
+}
+
+.Privacy-blue:hover {
+    border-bottom: 2px solid var(--link-color);
 }
 
 
@@ -314,14 +328,6 @@ body {
 }
 
 @media screen and (min-width:1023px) {
-    .container {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        padding: 0rem 2rem;
-        gap: 4rem;
-    }
-
     .error-message {
         bottom: 1rem;
     }
