--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +9,7 @@
     text-decoration: none;
     outline: none;
     object-fit: cover;
-    font-family: "Nunito";
+    font-family: "Nunito Sans";
 }
 
 :root {
@@ -21,7 +25,7 @@
     --erorr: #F54C40;
     --input-text-hover: #FFFFFF;
     --background-input-hover: #2F2F2F;
-    --font-family-inputs: "Nunito";
+    --font-family-inputs: "Nunito Sans";
 }
 
 body {
@@ -47,6 +51,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    flex: 1 1 0;
 }
 
 .brand-logo-design {
@@ -57,10 +62,9 @@ body {
 .title {
     color: var(--text-color-primary);
     font-size: 2.25rem;
-    font-family: "Roboto", var(--font-family-inputs);
+    font-family: "Roboto", "Nunito Sans";
     font-weight: 900;
     font-style: normal;
-
 }
 
 .header {
@@ -75,23 +79,12 @@ body {
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
-    height: 1.5rem;
 }
 
 .login p {
     color: var(--text-color-input-label);
     font-weight: 600;
     font-size: 1rem;
-}
-
-.login a {
-    color: var(--link-color);
-    font-size: 1rem;
-    font-weight: 600;
-}
-
-.login a:hover {
-    border-bottom: 2px solid var(--link-color);
 }
 
 .inputs-part {
@@ -160,11 +153,11 @@ body {
     cursor: pointer;
     width: 1rem;
     height: 1rem;
+    transition: filter 300ms;
 }
 
 :is(.eye-hide-icon:hover) {
     filter: invert(100%);
-    transition: 300ms;
 }
 
 .error-message {
@@ -198,11 +191,12 @@ body {
     cursor: pointer;
     font-size: 1rem;
     font-weight: 600;
+    transition: background-color 300ms;
 }
 
 .button:hover {
     background-color: var(--hover-button-bacground-color);
-    transition: 300ms;
+
 }
 
 
@@ -216,27 +210,40 @@ body {
     padding: 1rem 0;
 }
 
-.term-of-service .Privacy-blue {
-    color: var(--link-color);
-    font-size: 1rem;
-    font-weight: 600;
-}
-
 .sign-up-image img {
     width: 38rem;
     height: 43.75rem;
     padding: 1.5rem;
 }
 
-.Privacy-blue:hover {
-    border-bottom: 2px solid var(--link-color);
+.link {
+    color: var(--link-color);
+    font-size: 1rem;
+    font-weight: 600;
+    border-bottom: 2px solid transparent;
+    transition: border-color 300ms;
+
+}
+
+.link:hover {
+    border-color: var(--link-color);
+}
+
+.sign-up-image {
+    /* width: 50%; */
+    /* margin: 0 auto; */
+    flex: 1 1 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
 /* responsive part  */
 
 @media screen and (max-width:768px) {
-    .sign-up-image img {
+
+    .sign-up-image {
         display: none;
     }
 
