--- a/style.css
+++ b/style.css
@@ -1,15 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
-    outline: none;
-    object-fit: cover;
-    font-family: "Nunito Sans";
 }
 
 :root {
@@ -28,30 +20,44 @@
     --font-family-inputs: "Nunito Sans";
 }
 
-body {
+body,
+html {
     background-color: var(--background-primary);
     width: 100%;
-    height: 100dvb;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
+    margin: 0;
+    font-family: "Nunito Sans", sans-serif;
+}
+
+input,
+button {
+    outline: none;
+}
+
+h1,
+p {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
 }
 
 .container {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-    gap: 4rem;
+    gap: 2rem;
+    padding: 1rem;
     width: 100%;
+    height: 100%;
 }
 
 .sign-up {
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     flex: 1 1 0;
+    gap: 1rem;
 }
 
 .brand-logo-design {
@@ -61,23 +67,14 @@ body {
 
 .title {
     color: var(--text-color-primary);
-    font-size: 2.25rem;
-    font-family: "Roboto", "Nunito Sans";
+    font-size: 2rem;
+    font-family: "Roboto", sans-serif;
     font-weight: 900;
     font-style: normal;
 }
 
-.header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 0.5rem;
-}
-
 .login {
     display: flex;
-    flex-direction: row;
     gap: 0.5rem;
 }
 
@@ -87,38 +84,47 @@ body {
     font-size: 1rem;
 }
 
-.inputs-part {
+.form {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    width: 100%;
+    max-width: 40rem;
+    gap: 1rem;
 }
 
-.password-and-icon {
+.control {
     position: relative;
-    margin-bottom: 20px;
+    width: 100%;
+
 }
 
-.e1 {
-    background: none;
+.group {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.input-text {
     border: none;
     font-size: 1rem;
     font-weight: 400;
     background-color: var(--background-inside-input);
-    width: 34rem;
+    width: 100%;
     padding: 1rem 1.5rem;
     border-radius: 0.5rem;
     color: var(--text-color-primary);
-    position: relative;
     transition: background-color 300ms ease-in-out;
 
 }
 
-:is(.e1:hover) {
+.input-text:hover {
     background-color: var(--background-input-hover);
 }
 
-.password-label {
+.label {
     position: absolute;
     color: var(--text-color-input-label);
     font-size: 1rem;
@@ -130,15 +136,16 @@ body {
     transition: color, top, font-size, 300ms ease-in-out;
 }
 
-:is(.e1:focus + #password-label-confirmation) {
+
+.input-text:focus+#password-label-confirmation {
     color: var(--erorr);
 }
 
-.password-and-icon input:is(:hover, :focus)+label {
+.control input:is(:hover, :focus)+label {
     color: #F9F9F9;
 }
 
-.password-and-icon input:is(:focus, :not([value=""]))+label {
+.control input:is(:focus, :not([value=""]))+label {
     top: 0.75rem;
     font-size: 0.75rem;
 }
@@ -162,27 +169,20 @@ body {
 
 .error-message {
     display: flex;
-    justify-content: start;
     width: 100%;
     color: var(--erorr);
-    position: relative;
-    bottom: 0.7rem;
     font-weight: 700;
     font-size: 0.8rem;
 }
 
 #input3 {
     border: 2px solid var(--erorr);
+    display: flex;
 }
-
-.password-and-icon {
-    position: relative;
-}
-
 
 .button {
     background-color: var(--normal-button-bacground-color);
-    width: 34rem;
+    width: 100%;
     height: 3rem;
     border-radius: 0.5rem;
     padding: 0.5rem 4rem 0.5rem 4rem;
@@ -202,23 +202,15 @@ body {
 
 .term-of-service {
     color: var(--text-color-input-label);
-    display: flex;
-    flex-direction: row;
-    gap: 0.5rem;
-    font-size: 1rem;
     font-weight: 600;
-    padding: 1rem 0;
 }
 
 .sign-up-image img {
-    width: 38rem;
-    height: 43.75rem;
-    padding: 1.5rem;
+    width: 75%;
 }
 
 .link {
     color: var(--link-color);
-    font-size: 1rem;
     font-weight: 600;
     border-bottom: 2px solid transparent;
     transition: border-color 300ms;
@@ -230,113 +222,52 @@ body {
 }
 
 .sign-up-image {
-    /* width: 50%; */
-    /* margin: 0 auto; */
     flex: 1 1 0;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 
 /* responsive part  */
-
 @media screen and (max-width:768px) {
-
     .sign-up-image {
         display: none;
     }
-
-    .container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 2.3rem 2rem;
-        gap: 0;
-    }
-
-    .e1 {
-        width: 20.625rem;
-    }
-
-    .inputs-part {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .button {
-        width: 20.625rem;
-    }
-
-    .term-of-service {
-        text-align: center;
-        flex-wrap: wrap;
-        display: flex;
-        width: 17rem;
-        line-height: 1.364rem;
-    }
-
-    .title {
-        font-size: 2.188rem;
-    }
-
-    .error-message {
-        bottom: 1rem;
-    }
-
 }
 
+@media screen and (min-width:640px) {
+    .container {
+        padding: 2rem;
+    }
+}
 
-@media screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (min-width:768px) {
 
     .sign-up-image img {
-        width: 28rem;
-        height: 32rem;
+        width: 70%;
     }
 
-    .container {
+    .sign-up-image {
+
         display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        padding: 2.3rem 2rem;
-    }
-
-    .e1 {
-        width: 20.625rem;
-    }
-
-    .inputs-part {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-    }
-
-    .button {
-        width: 20.625rem;
-    }
-
-    .term-of-service {
-        text-align: center;
-        flex-wrap: wrap;
-        display: flex;
-        line-height: 1.364rem;
     }
 
     .title {
-        font-size: 1.875rem;
-    }
-
-    .error-message {
-        bottom: 1rem;
+        font-size: 2.5rem;
     }
 
 }
 
 @media screen and (min-width:1023px) {
-    .error-message {
-        bottom: 1rem;
+    .sign-up-image img {
+        width: 60%;
+    }
+}
+
+@media screen and (min-width:1540px) {
+
+    .sign-up-image img {
+        width: 50%;
     }
 
 }
