--- a/style.css
+++ b/style.css
@@ -86,8 +86,6 @@ a {
 
 .form {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
     width: 100%;
     max-width: 40rem;
@@ -232,6 +230,11 @@ a {
 @media screen and (max-width:768px) {
     .sign-up-image {
         display: none;
+    }
+
+    .term-of-service {
+        text-align: center;
+        width: 100%;
     }
 }
 
