--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     --input-text-hover: #FFFFFF;
     --background-input-hover: #2F2F2F;
     --font-family-inputs: "Nunito Sans";
+    --tooltip-background-color: #0A0A0A;
 }
 
 body,
@@ -47,9 +48,9 @@ a {
     display: flex;
     align-items: center;
     gap: 2rem;
-    padding: 1rem;
     width: 100%;
     height: 100%;
+    padding: 1rem;
 }
 
 .sign-up {
@@ -61,16 +62,18 @@ a {
 }
 
 .brand-logo-design {
-    filter: invert(100%);
+    display: flex;
+    justify-content: center;
+    fill: var(--hover-eye-bacground-color);
     width: 5.75rem;
 }
 
 .title {
     color: var(--text-color-primary);
-    font-size: 2rem;
     font-family: "Roboto", sans-serif;
     font-weight: 900;
     font-style: normal;
+    font-size: 2rem;
 }
 
 .login {
@@ -79,17 +82,17 @@ a {
 }
 
 .login p {
-    color: var(--text-color-input-label);
-    font-weight: 600;
     font-size: 1rem;
+    font-weight: 600;
+    color: var(--text-color-input-label);
 }
 
 .form {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     width: 100%;
     max-width: 40rem;
-    gap: 1rem;
 }
 
 .control {
@@ -109,13 +112,12 @@ a {
     border: none;
     font-size: 1rem;
     font-weight: 400;
-    background-color: var(--background-inside-input);
     width: 100%;
     padding: 1rem 1.5rem;
     border-radius: 0.5rem;
     color: var(--text-color-primary);
     transition: background-color 300ms ease-in-out;
-
+    background-color: var(--background-inside-input);
 }
 
 .input-text:hover {
@@ -124,14 +126,14 @@ a {
 
 .label {
     position: absolute;
-    color: var(--text-color-input-label);
-    font-size: 1rem;
-    font-weight: 400;
     top: 50%;
     left: 1.5rem;
+    font-size: 1rem;
+    font-weight: 400;
     pointer-events: none;
     transform: translateY(-50%);
     transition: color, top, font-size, 300ms ease-in-out;
+    color: var(--text-color-input-label);
 }
 
 
@@ -148,48 +150,31 @@ a {
     font-size: 0.75rem;
 }
 
-
-.eye-hide-icon {
-    filter: invert(59%);
-    position: absolute;
-    right: 1rem;
-    top: 1.2rem;
-    object-fit: cover;
-    cursor: pointer;
-    width: 1rem;
-    height: 1rem;
-    transition: filter 300ms;
-}
-
-:is(.eye-hide-icon:hover) {
-    filter: invert(100%);
-}
-
 .error-message {
     display: flex;
     width: 100%;
-    color: var(--erorr);
     font-weight: 700;
     font-size: 0.8rem;
+    color: var(--erorr);
 }
 
-#input3 {
-    border: 2px solid var(--erorr);
+.error {
     display: flex;
+    border: 2px solid var(--erorr);
 }
 
 .button {
-    background-color: var(--normal-button-bacground-color);
     width: 100%;
     height: 3rem;
-    border-radius: 0.5rem;
-    padding: 0.5rem 4rem 0.5rem 4rem;
-    border: none;
-    color: var(--text-color-primary);
-    cursor: pointer;
     font-size: 1rem;
     font-weight: 600;
+    border-radius: 0.5rem;
+    border: none;
+    padding: 0.5rem 4rem;
+    cursor: pointer;
+    color: var(--text-color-primary);
     transition: background-color 300ms;
+    background-color: var(--normal-button-bacground-color);
 }
 
 .button:hover {
@@ -208,9 +193,9 @@ a {
 }
 
 .link {
-    color: var(--link-color);
     font-weight: 600;
     border-bottom: 2px solid transparent;
+    color: var(--link-color);
     transition: border-color 300ms;
 
 }
@@ -220,9 +205,47 @@ a {
 }
 
 .sign-up-image {
-    flex: 1 1 0;
     display: flex;
     justify-content: center;
+    flex: 1 1 0;
+}
+
+
+.tooltipEl {
+    display: inline-block;
+    width: 80px;
+}
+
+.tooltipEl {
+    position: relative;
+    bottom: 4.3rem;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 8px;
+    padding: 12px 8px;
+    text-transform: capitalize;
+    font-family: "Nunito Sans", sans-serif;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 400;
+    z-index: 1;
+    background-color: var(--tooltip-background-color);
+    color: var(--text-color-primary);
+}
+
+.tooltipEl::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 5px;
+    border-style: solid;
+    border-color: var(--tooltip-background-color) transparent transparent transparent;
+}
+
+.tooltipEl:hover {
+    visibility: visible;
 }
 
 
@@ -272,5 +295,28 @@ a {
     .sign-up-image img {
         width: 50%;
     }
+
+}
+
+.svg-icon svg {
+    width: 1.25rem;
+    height: 1.25rem;
+}
+
+.svg-icon {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    width: 1.25rem;
+    height: 1.25rem;
+    object-fit: cover;
+    cursor: pointer;
+    transition: filter 300ms;
+    fill: var(--normal-eye-bacground-color);
+    transition: fill 300ms;
+}
+
+.svg-icon:hover {
+    fill: var(--hover-eye-bacground-color);
 
 }
